# AI_Study_Summary

./: README.md
datawhale_rag_study/: Task01.ipynb  Task02.ipynb
doc/: Agent从入门到放弃.md  MCP教程.md  RAG快速入门.md  YOLO算法系列1：训练自己的数据集.md  智能体和工作流.md
langchain_dev/: 01 建构简单的LLM应用.ipynb  02 建构RAG应用.ipynb  03 建构SQL查询助手.ipynb
mcp/: README.md
mcp/mcp-client/: README.md  client.py  mcp_server_config.json  prompt_template.py  pyproject.toml
mcp/weather_mcp_server/: README.md  pyproject.toml  weather.py
opencv/: opencv快速入门.ipynb  图形基本操作.ipynb
rag/: README.md  main.py  pyproject.toml  rag_doc.md
yolo/: YOLO算法系列1：训练自己的数据集.md  YOLO算法系列2：源码分析.md  YOLO算法系列3：工程化.md
